<resources>
    <string name="app_name">MyFit</string>

    <string name="action_settings">Settings</string>
    <string name="permission_denied_explanation">permission denied explanation</string>
    <string name="todays_steps">Today result</string>
    <string name="mygpi">MyFIT</string>
    <string name="zero">0</string>
    <string name="today_s_steps">Today\'s Steps</string>
    <string name="today_at_11_41_am">Today at </string>
    <string name="km">Km</string>
    <string name="steps_" translatable="false">Steps :</string>
    <string name="km_s" translatable="false">KM\'s :</string>
    <string name="application_should_count_steps_in_foreground">Application needs some access for counting steps in foreground</string>
    <string name="ok">Ok</string>


    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
</resources>
