<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/defaultBackgroundView"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@color/colorDefault"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="148dp"
            android:background="@drawable/ic_wave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/defaultBackgroundView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mygpiTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/bpg_web_001_caps_webfont"
            android:text="@string/mygpi"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/defaultBackgroundView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bpg_phone_sans"
            android:text="@string/description"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/frameLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mygpiTitle"
            app:layout_constraintVertical_bias="0.29"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.8" />

        <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
            android:id="@+id/circularProgress"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_marginTop="28dp"
            android:indeterminate="false"
            app:direction="clockwise"
            app:drawDot="false"
            app:enableProgressAnimation="false"
            app:fillBackground="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            app:progress="50"
            app:progressBackgroundColor="#D1D1D1"
            app:progressBackgroundStrokeWidth="10dp"
            app:progressCap="round"
            app:progressColor="@color/colorPink"
            app:progressStrokeWidth="10dp"
            app:startAngle="270"
            app:textColor="@android:color/transparent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today_s_steps"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/showSteps"
            app:layout_constraintEnd_toEndOf="@+id/circularProgress"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@+id/circularProgress"
            app:layout_constraintTop_toTopOf="@+id/circularProgress"
            app:layout_constraintVertical_bias="0.707" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/showSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bpg_web_001_caps_webfont"
            android:text="@string/zero"
            android:textColor="@color/colorGrayDark"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/circularProgress"
            app:layout_constraintEnd_toEndOf="@+id/circularProgress"
            app:layout_constraintStart_toStartOf="@+id/circularProgress"
            app:layout_constraintTop_toTopOf="@id/circularProgress"
            app:layout_constraintVertical_bias="0.602" />

        <!--<androidx.appcompat.widget.AppCompatTextView-->
        <!--android:id="@+id/wasASleep"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:text="@string/today_at_11_41_am"-->
        <!--android:textSize="16sp"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/circularProgress" />-->


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/km"
            android:textColor="@color/colorGrayDark"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circularProgress" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/wentKilometersCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/bpg_web_001_caps_webfont"
            android:textColor="@color/colorGrayDark"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView7" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>